# test_mcp_litellm

./: .env.example  README.md  cli.py  pyproject.toml
api/: main.py
core/: llm.py  models.py  settings.py
mcp_server/: server.py
