[project]
name = "faq"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "litellm>=1.88.1",
    "pydantic-settings>=2.14.1",
    "typer>=0.25.1",
    "uvicorn>=0.49.0",
]
